# sdp-2021-22

./: .gitignore  README.md  build.sh  clean  clean.sh  compile  meson.build  meson_options.txt  rebuild  setup.sh  test
ContestProblems/TimusOnlineJudge/: meson.build
ContestProblems/TimusOnlineJudge/democracy_in_danger/: meson.build  solution.cpp
ContestProblems/TimusOnlineJudge/metro/: meson.build  solution.cpp
Problems/TimusOnlineJudge/: README.md
Problems/TimusOnlineJudge/DemocracyInDanger/: CMakeLists.txt  solution.cpp
Problems/TimusOnlineJudge/Metro/: CMakeLists.txt  solution.cpp
University/: CMakeLists.txt  README.md  elective_discipline.cpp  elective_discipline.h  main.cpp  student.h  tcollection.h
core/: agrmemory.cpp  agrmemory.h  meson.build
core/tests/: TestMemoryUnitCallocModifyCompare.cpp  TestMemoryUnitCallocVerifyThatIsZeroed.cpp  meson.build  test_include.h
my_utils/: my_log.h  my_types.h
testing/: meson.build  test_collection_basic.cpp
tools/: meson.build  scripts.sh
tools/core/: agrmemory.cpp  agrmemory.h  meson.build
tools/core/builddir/meson-logs/: meson-log.txt
tools/utils/: agrlog.h  agrtypes.h  agrutils.cpp  agrutils.h  meson.build
unit_tests/core/: TestMemoryUnitCallocModifyCompare.cpp  TestMemoryUnitCallocVerifyThatIsZeroed.cpp  meson.build
unit_tests/week-02/: TestCollectionBasic.cpp  meson.build
unit_tests/week-05/: LinkedListMemoryLayoutAnalyze.cpp  TestLinkedListAddRemove.cpp  TestLinkedListFind.cpp  meson.build
utils/: agrtypes.h
week-02/: README.md  main.cpp  meson.build
week-02/collection/: TCollection.h  TCollection.hpp  collection.h  meson.build
week-02/elective_discipline/: elective_discipline.cpp  elective_discipline.h  main.cpp  meson.build
week-02/my-susy/: meson.build  my_susy.cpp  my_susy.h
week-02/student/: main.cpp  meson.build  student.cpp  student.h
week-02/susi/: meson.build  susi.cpp  susi.h
week-03/: main.cpp  meson.build
week-05/: main.cpp  meson.build  solution.cpp
week-05/list/: agrlinkedlist.h  linkedlist.h  list.cpp  list.h  meson.build
week-05/list/tests/: meson.build  test_include.h
