#memory_test_suit
linked_list_test_inc = [
    my_utils_inc,
    linked_list_test_incl
]

linked_list_test_deps = [
    memory_dep,
    linked_list_dep
]

linked_list_test_inc_dir = include_directories('.')

linked_list_test_inc += linked_list_test_inc_dir

arguments = [
    '-DDEBUG'
]

#executables

#tests